Refactored DTO Classes and Optimized userContainsTaskCollectionId method